--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: EDM
-show_downalods: true
-#theme: jekyll-theme-dinky
+show_downnload: true
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
