--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: EDM
 show_downnload: true
-remote_theme: pages-themes/hacker@v0.2.0
+#theme: jekyll-theme-midnight
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
